# osrs_price_cli

./: .gitignore  Cargo.toml  flake.nix
src/: client.rs  config.rs  main.rs
src/test_data/: mappings.json  prices.json
