[package]
name = "osrs_price_lookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
directories = "5.0.1"
env_logger = "0.10.1"
log = "0.4.20"
num-format = { version = "0.4.4", features = ["with-system-locale"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
mockall = "0.12.1"
